resources/insights/dev-mnm-sre/prometheus.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: prometheus
  name: prometheus
spec:
  host: prometheus-mnm-sre.5a9f.insights-dev.openshiftapps.com
  port:
    targetPort: proxy-port
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
